# polling

./: .gitignore  pyproject.toml  pyprojectbak.toml  requirements.txt
app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/models/: items.py  users.py
app/routers/: items.py  users.py
app/schemas/: items.py  users.py
app/services/: items.py  users.py
src/: main.py
static/: index.html
tests/: test_main.py
